# doujin-player

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  settings.rs  thumbbar.rs  thumbnail_cache.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/scanner/: mod.rs  thumbnail.rs  work_detector.rs
src/api/: index.ts
src/components/: ErrorBoundary.tsx  WelcomeGuide.tsx
src/components/common/: SortableControls.tsx
src/components/layout/: MainLayout.tsx  MiniPlayer.tsx  Sidebar.tsx
src/components/settings/: ShortcutSettingsModal.tsx
src/components/work-detail/: AddToPlaylistButton.tsx  ImageLightbox.tsx  LoopSegmentList.tsx  PlayableItemRow.tsx  TrackList.tsx  VariantSelector.tsx  WorkEntityEditor.tsx
src/hooks/: useEffectiveTrackIndex.ts  useMediaPlayer.ts  useShortcuts.ts
src/i18n/: index.ts
src/pages/: CirclesPage.tsx  FavoritesPage.tsx  LibraryPage.tsx  PlaylistDetailPage.tsx  PlaylistsPage.tsx  RecentPage.tsx  SettingsPage.tsx  TagsPage.tsx  VoiceActorsPage.tsx  WorkDetailPage.tsx  WorkGridPage.tsx
src/stores/: languageStore.ts  layoutStore.ts  libraryRescanStore.ts  playbackSettingsStore.ts  playerStore.ts  shortcutStore.ts  themeStore.ts
src/utils/: format.ts  media.ts  shortcutKey.ts  thumbnailCache.ts
(+13 files in other folders)
